--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <div class="frame">
-        <div class="center">
+    <div class="container">
+        <div class="task task__02">
+            <div class="elem-02 elem-02__top"></div>
+            <div class="elem-02 elem-02__middle"></div>
+            <div class="elem-02 elem-02__bottom"></div>
+        </div>
+
+        <div class="task task__03">
             <div class="elem top"></div>
             <div class="elem middle"></div>
             <div class="elem bottom"></div>
