--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,15 @@
 <body>
     <div class="container">
         <div class="task task__02">
-            <div class="elem-02 elem-02__top"></div>
-            <div class="elem-02 elem-02__middle"></div>
-            <div class="elem-02 elem-02__bottom"></div>
+            <div class="elem elem__top"></div>
+            <div class="elem elem__middle"></div>
+            <div class="elem elem__bottom"></div>
         </div>
 
-        <div class="task task__03">
-            <div class="elem top"></div>
-            <div class="elem middle"></div>
-            <div class="elem bottom"></div>
-        </div>
+
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
