--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,13 @@
 
 <body>
     <div class="container">
-        <div class="task task__02">
-            <div class="elem elem__top"></div>
-            <div class="elem elem__middle"></div>
-            <div class="elem elem__bottom"></div>
+        <div class="task">
+            <div class="task__02">
+                <div class="elem elem__top"></div>
+                <div class="elem elem__middle"></div>
+                <div class="elem elem__bottom"></div>
+            </div>
+
         </div>
 
 
