created big circle

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,18 @@
 
         </div>
 
+        <div class="task">
+            <div class="task__03 circle">
+                <div class="circle__elem circle__elem--big"></div>
+                <!-- <div class="circle__elem circle__elem--middle"></div>
+                <div class="circle__elem circle__elem--little"></div> -->
+            </div>
+        </div>
+
 
     </div>
+
+
 
     <script src="js/main.js"></script>
 </body>
