--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,13 @@
 
         </div>
 
-        <div class="task">
-            <div class="task__03 circle">
+        <div class="task circle">
+            <div class="task__04 circle_container paused">
                 <div class="circle__elem circle__elem--big"></div>
-                <!-- <div class="circle__elem circle__elem--middle"></div>
-                <div class="circle__elem circle__elem--little"></div> -->
+                <div class="circle__elem circle__elem--middle"></div>
+                <div class="circle__elem circle__elem--little"></div>
             </div>
+            <button type="button" class="btn circle__btn" id="task-04-btn">Run</button>
         </div>
 
 
