--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,14 @@
                 <div class="elem elem__middle"></div>
                 <div class="elem elem__bottom"></div>
             </div>
+        </div>
 
+        <div class="task task_03">
+            <div class="task__03 pyramid">
+                <div class="pyramid__sun"></div>
+                <div class="pyramid__sky"></div>
+                <div class="pyramid__sand"></div>
+            </div>
         </div>
 
         <div class="task circle">
