--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
                 <div class="pyramid__sun"></div>
                 <div class="pyramid__sky"></div>
                 <div class="pyramid__sand"></div>
+                <div class="pyramid__body">
+
+                </div>
             </div>
         </div>
 
