--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,8 @@
                 <div class="pyramid__sun"></div>
                 <div class="pyramid__sky"></div>
                 <div class="pyramid__sand"></div>
-                <div class="pyramid__body">
-
-                </div>
+                <div class="pyramid__body_left"></div>
+                <div class="pyramid__body_right"></div>
             </div>
         </div>
 
