--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                 <div class="pyramid__sand"></div>
                 <div class="pyramid__body_left"></div>
                 <div class="pyramid__body_right"></div>
+                <div class="pyramid__shade"></div>
             </div>
         </div>
 
