--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="task task_03">
-            <div class="task__03 pyramid">
+            <div class="task__03 pyramid paused">
                 <div class="pyramid__sun"></div>
                 <div class="pyramid__sky"></div>
                 <div class="pyramid__sand"></div>
@@ -28,15 +28,16 @@
                 <div class="pyramid__body_right"></div>
                 <div class="pyramid__shade"></div>
             </div>
+            <button type="button" class="btn" id="task-03-btn">Run</button>
         </div>
 
         <div class="task circle">
-            <div class="task__04 circle_container paused">
+            <div class="task__04 circle__container paused">
                 <div class="circle__elem circle__elem--big"></div>
                 <div class="circle__elem circle__elem--middle"></div>
                 <div class="circle__elem circle__elem--little"></div>
             </div>
-            <button type="button" class="btn circle__btn" id="task-04-btn">Run</button>
+            <button type="button" class="btn" id="task-04-btn">Run</button>
         </div>
 
 
